remove static from module-info, add execution configurations to pom